# 2iChat

./: .gitignore  CMakeLists.txt  README.md  client.c  include.h  serveur.c
client/: affichage.c  client.c
libs/: include.h
serveur/: affichage.c  commandes.c  serveur.c
